# dash-sentinel-backend

./: README.md  db_ops.py  pyproject.toml
hackutd_ix/: camera.py  colordetect.py  common.py  detect_vehicle.py  fileinput.py  server.py  test_detect_vehicle.py
