[tool.poetry]
name = "hackutd-ix"
version = "0.1.0"
description = ""
authors = ["Amrit Rathie", "Aravindan Kasiraman", "Charlie Mahana", "Timothy Sweet"]
readme = "README.md"
packages = [{include = "hackutd_ix"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pillow = "^9.3.0"
haishoku = "^1.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
