[tool.poetry]
name = "hackutd-ix"
version = "0.1.0"
description = ""
authors = ["Amrit Rathie", "Aravindan Kasiraman", "Charlie Mahana", "Timothy Sweet"]
readme = "README.md"
packages = [{include = "hackutd_ix"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pillow = "^9.3.0"
toml = "^0.10.2"
sklearn = "^0.0.post1"
haishoku = "^1.1.8"
opencv-python = "^4.6.0.66"
scikit-image = "^0.19.3"
scikit-learn = "^1.1.3"
matplotlib = "^3.6.2"
moviepy = "^1.0.3"
imageio-ffmpeg = "^0.4.7"


[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
